@slidy/react - add eslint-config-react-app

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -51,7 +51,8 @@
         "@slidy/animation": "workspace:*",
         "@slidy/assets": "workspace:*",
         "@slidy/core": "workspace:*",
-        "@slidy/easing": "workspace:*"
+        "@slidy/easing": "workspace:*",
+        "eslint-config-react-app": "^7.0.1"
     },
     "dependencies": {
         "@types/react": "^18.0.17",
