--- a/packages/solid/tsconfig.json
+++ b/packages/solid/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "baseUrl": ".",
         "declarationDir": "dist",
         "jsx": "preserve",
         "jsxImportSource": "solid-js",
@@ -9,6 +10,12 @@
         "skipLibCheck": true,
         "preserveValueImports": true
     },
-    "include": ["src/**/*", "src/dev/*"],
-    "exclude": ["dist", "public"]
+    "include": [
+        "src/**/*",
+        "src/dev/*"
+    ],
+    "exclude": [
+        "dist",
+        "public"
+    ]
 }
