--- a/packages/animation/tsconfig.json
+++ b/packages/animation/tsconfig.json
@@ -1,7 +1,10 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "baseUrl": ".",
         "declarationDir": "dist/"
     },
-    "include": ["src/*"]
+    "include": [
+        "src/*"
+    ]
 }
