--- a/packages/element/tsconfig.json
+++ b/packages/element/tsconfig.json
@@ -3,5 +3,10 @@
     "compilerOptions": {
         "declarationDir": "dist/"
     },
-    "include": ["src/*"]
+    "include": [
+        "src/*"
+    ],
+    "exclude": [
+        "src/utils/*"
+    ]
 }
