--- a/packages/react/tsconfig.build.json
+++ b/packages/react/tsconfig.build.json
@@ -3,9 +3,5 @@
         "baseUrl": "."
     },
     "extends": "./tsconfig.json",
-    "exclude": [
-        "dist",
-        "public",
-        "src/dev/*"
-    ]
+    "exclude": ["dist", "public", "src/dev/*"]
 }
