--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -8,12 +8,6 @@
         "skipLibCheck": true,
         "preserveValueImports": true
     },
-    "include": [
-        "src/*",
-        "src/dev/*"
-    ],
-    "exclude": [
-        "dist",
-        "public"
-    ]
+    "include": ["src/*", "src/dev/*"],
+    "exclude": ["dist", "public"]
 }
