--- a/package.json
+++ b/package.json
@@ -4,34 +4,35 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev:wc": "pnpm --filter=@slidy/wc... --parallel dev",
+        "dev:core": "pnpm --filter=@slidy/core... --parallel dev:core",
+        "dev:element": "pnpm --filter=@slidy/element... --parallel dev",
+        "dev:svelte": "pnpm --filter=@slidy/svelte... --parallel dev:svelte",
+        "dev:solid": "pnpm --filter=@slidy/solid... --parallel dev",
+        "dev:react": "pnpm --filter=@slidy/react... --parallel dev",
         "dev:vue": "pnpm --filter=@slidy/vue... --parallel dev",
         "dev:www": "pnpm --filter=@slidy/www... --parallel dev",
-        "dev:core": "pnpm --filter=@slidy/core... --parallel dev:core",
-        "dev:react": "pnpm --filter=@slidy/react... --parallel dev",
-        "dev:solid": "pnpm --filter=@slidy/solid... --parallel dev",
         "dev:malina": "pnpm --filter=@slidy/malina... --parallel dev",
-        "dev:svelte": "pnpm --filter=@slidy/svelte... --parallel dev:svelte",
-        "build:wc": "pnpm --filter=@slidy/wc... build",
-        "build:vue": "pnpm --filter=@slidy/vue... build",
-        "build:react": "pnpm --filter=@slidy/react... build",
-        "build:solid": "pnpm --filter=@slidy/solid... build",
-        "build:malina": "pnpm --filter=@slidy/malina... build",
-        "build:svelte": "pnpm --filter=@slidy/svelte... build",
         "build:core": "pnpm --filter=@slidy/core... build",
         "build:media": "pnpm --filter=@slidy/media... build",
         "build:easing": "pnpm --filter=@slidy/easing... build",
+        "build:element": "pnpm --filter=@slidy/element... build",
         "build:animation": "pnpm --filter=@slidy/animation... build",
+        "build:svelte": "pnpm --filter=@slidy/svelte... build",
+        "build:solid": "pnpm --filter=@slidy/solid... build",
+        "build:react": "pnpm --filter=@slidy/react... build",
+        "build:vue": "pnpm --filter=@slidy/vue... build",
         "build:www": "pnpm --filter=@slidy/www... build",
+        "build:malina": "pnpm --filter=@slidy/malina... build",
         "format": "prettier --write '**/*.{js,ts,md,json,html,css,md}'",
         "pub": "pnpm -r pub",
         "pub:core": "pnpm --filter=@slidy/core pub",
         "pub:media": "pnpm --filter=@slidy/media pub",
         "pub:easing": "pnpm --filter=@slidy/easing pub",
+        "pub:element": "pnpm --filter=@slidy/element pub",
         "pub:animation": "pnpm --filter=@slidy/animation pub",
-        "pub:react": "pnpm --filter=@slidy/react pub",
         "pub:svelte": "pnpm --filter=@slidy/svelte pub",
         "pub:solid": "pnpm --filter=@slidy/solid pub",
+        "pub:react": "pnpm --filter=@slidy/react pub",
         "up:all": "pnpm up -r"
     },
     "repository": {
