--- a/packages/element/tsconfig.build.json
+++ b/packages/element/tsconfig.build.json
@@ -7,6 +7,7 @@
         "dist",
         "public",
         "src/dev/*",
-        "src/component.ts"
+        "src/component.ts",
+        "src/iife.ts"
     ]
 }
