--- a/packages/element/package.json
+++ b/packages/element/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@slidy/element",
     "version": "1.0.0",
-    "description": "Simple, configurable & reusable carousel WebComponent",
+    "description": "Simple, configurable & reusable carousel CustomElement",
     "main": "dist/index.cjs",
     "module": "dist/index.mjs",
     "browser": "dist/index.js",
