--- a/packages/element/package.json
+++ b/packages/element/package.json
@@ -5,7 +5,7 @@
     "main": "dist/index.cjs",
     "module": "dist/index.mjs",
     "browser": "dist/index.js",
-    "types": "dist/types.d.ts",
+    "types": "dist/index.d.ts",
     "type": "module",
     "files": [
         "dist/*"
