--- a/packages/element/tsconfig.build.json
+++ b/packages/element/tsconfig.build.json
@@ -3,11 +3,5 @@
         "baseUrl": "."
     },
     "extends": "./tsconfig.json",
-    "exclude": [
-        "dist",
-        "public",
-        "src/dev/*",
-        "src/component.ts",
-        "src/iife.ts"
-    ]
+    "exclude": ["dist", "public", "src/dev/*", "src/component.ts", "src/iife.ts"]
 }
