--- a/packages/element/tsconfig.json
+++ b/packages/element/tsconfig.json
@@ -3,11 +3,6 @@
     "compilerOptions": {
         "declarationDir": "dist/"
     },
-    "include": [
-        "src/*"
-    ],
-    "exclude": [
-        "src/lib/*",
-        "src/iife.ts"
-    ]
+    "include": ["src/*"],
+    "exclude": ["src/lib/*", "src/iife.ts"]
 }
