--- a/www/package.json
+++ b/www/package.json
@@ -20,7 +20,7 @@
 		"@slidy/media": "workspace:*",
 		"@slidy/svelte": "workspace:*",
 		"@sveltejs/adapter-static": "1.0.0-next.39",
-		"@sveltejs/kit": "^1.0.0-next.469",
+		"@sveltejs/kit": "^1.0.0-next.474",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^3.4.1",
 		"mdast-util-to-string": "^3.1.0",
@@ -31,6 +31,6 @@
 		"svelte-check": "^2.9.0",
 		"svelte-preprocess": "^4.10.7",
 		"unist-util-visit": "^4.1.1",
-		"vite": "^3.1.0-beta.2"
+		"vite": "^3.1.0"
 	}
 }
