@slidy/core - add @slidy/plugins to dev

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -49,6 +49,7 @@
     "devDependencies": {
         "@slidy/animation": "workspace:*",
         "@slidy/easing": "workspace:*",
-        "@slidy/media": "workspace:*"
+        "@slidy/media": "workspace:*",
+        "@slidy/plugins": "workspace:*"
     }
 }
