--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "build:easing": "pnpm --filter=@slidy/easing... build",
         "build:element": "pnpm --filter=@slidy/element... build",
         "build:animation": "pnpm --filter=@slidy/animation... build",
+        "build:plugins": "pnpm --filter=@slidy/plugins... build",
         "build:svelte": "pnpm --filter=@slidy/svelte... build",
         "build:solid": "pnpm --filter=@slidy/solid... build",
         "build:react": "pnpm --filter=@slidy/react... build",
@@ -29,6 +30,7 @@
         "pub:easing": "pnpm --filter=@slidy/easing pub",
         "pub:element": "pnpm --filter=@slidy/element pub",
         "pub:animation": "pnpm --filter=@slidy/animation pub",
+        "pub:plugins": "pnpm --filter=@slidy/plugins pub",
         "pub:svelte": "pnpm --filter=@slidy/svelte pub",
         "pub:solid": "pnpm --filter=@slidy/solid pub",
         "pub:react": "pnpm --filter=@slidy/react pub",
