--- a/packages/plugins/tsconfig.json
+++ b/packages/plugins/tsconfig.json
@@ -3,5 +3,7 @@
     "compilerOptions": {
         "declarationDir": "dist"
     },
-    "include": ["src/*"]
+    "include": [
+        "src/*"
+    ]
 }
