fix all builds & types declaration

--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
         "dev:vue": "pnpm --filter=@slidy/vue... --parallel dev",
         "dev:www": "pnpm --filter=@slidy/www... --parallel dev",
         "dev:malina": "pnpm --filter=@slidy/malina... --parallel dev",
-        "build:core": "pnpm --filter=@slidy/core... build",
-        "build:media": "pnpm --filter=@slidy/media... build",
-        "build:easing": "pnpm --filter=@slidy/easing... build",
+        "build:core": "pnpm --filter=@slidy/core build",
+        "build:media": "pnpm --filter=@slidy/media build",
+        "build:easing": "pnpm --filter=@slidy/easing build",
         "build:element": "pnpm --filter=@slidy/element... build",
-        "build:animation": "pnpm --filter=@slidy/animation... build",
-        "build:plugins": "pnpm --filter=@slidy/plugins... build",
+        "build:animation": "pnpm --filter=@slidy/animation build",
+        "build:plugins": "pnpm --filter=@slidy/plugins build",
         "build:svelte": "pnpm --filter=@slidy/svelte... build",
         "build:solid": "pnpm --filter=@slidy/solid... build",
         "build:react": "pnpm --filter=@slidy/react... build",
