--- a/packages/easing/tsconfig.json
+++ b/packages/easing/tsconfig.json
@@ -1,7 +1,10 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "declarationDir": "dist"
+        "outFile": "dist/index.d.ts",
+        "isolatedModules": false
     },
-    "include": ["src/*"]
+    "include": [
+        "src/*"
+    ]
 }
