--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,13 +1,18 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "declarationDir": "dist",
         "jsx": "react-jsx",
         "allowSyntheticDefaultImports": true,
         "sourceMap": true,
         "skipLibCheck": true,
         "preserveValueImports": true
     },
-    "include": ["src/*", "src/dev/*"],
-    "exclude": ["dist", "public"]
+    "include": [
+        "src/*",
+        "src/dev/*"
+    ],
+    "exclude": [
+        "dist",
+        "public"
+    ]
 }
