--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,8 +1,13 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "declarationDir": "dist"
+        "outFile": "dist/index.d.ts",
+        "isolatedModules": false
     },
-    "include": ["src/*"],
-    "exclude": ["src/iife.ts"]
+    "include": [
+        "src/*"
+    ],
+    "exclude": [
+        "src/iife.ts"
+    ]
 }
