--- a/packages/element/package.json
+++ b/packages/element/package.json
@@ -12,7 +12,7 @@
     ],
     "scripts": {
         "dev": "node esbuild --dev",
-        "build": "node esbuild && tsc --project tsconfig.build.json",
+        "build": "node esbuild && tsc",
         "lint": "eslint './src/**/*.{js,ts}'",
         "lint:fix": "eslint --fix './src/**/*.{js,ts}'",
         "prelint": "pnpm run format",
