--- a/packages/plugins/tsconfig.json
+++ b/packages/plugins/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "declarationDir": "dist"
+        "outFile": "dist/index.d.ts",
+        "isolatedModules": false
     },
     "include": [
         "src/*"
