--- a/packages/svelte/tsconfig.build.json
+++ b/packages/svelte/tsconfig.build.json
@@ -1,7 +1,8 @@
 {
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"baseUrl": ".",
+		"outFile": "dist/index.d.ts",
+		"isolatedModules": false
 	},
 	"exclude": [
 		"dist",
