--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,7 +13,7 @@
         "dev": "node esbuild --dev",
         "dev:core": "node esbuild --core",
         "dev:svelte": "node esbuild --dev",
-        "build": "node rm && node esbuild && tsc && node ../../env/dts",
+        "build": "node ../../env/rm && node esbuild && tsc && node ../../env/dts",
         "lint": "eslint './src/**/*.{js,ts}'",
         "lint:fix": "eslint --fix './src/**/*.{js,ts}'",
         "prelint": "pnpm run format",
