@slidy/solid - add cdn build

--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -8,6 +8,8 @@
     ],
     "main": "dist/slidy.mjs",
     "module": "dist/slidy.mjs",
+    "cdn": "dist/slidy.js",
+    "unpkg": "dist/slidy.js",
     "types": "dist/index.d.ts",
     "style": "dist/slidy.css",
     "sideEffects": false,
