--- a/packages/element/tsconfig.json
+++ b/packages/element/tsconfig.json
@@ -4,10 +4,6 @@
         "outFile": "dist/index.d.ts",
         "isolatedModules": false
     },
-    "include": [
-        "src/*"
-    ],
-    "exclude": [
-        "src/iife.ts"
-    ]
+    "include": ["src/*"],
+    "exclude": ["src/iife.ts"]
 }
