--- a/packages/react/tsconfig.build.json
+++ b/packages/react/tsconfig.build.json
@@ -4,9 +4,5 @@
         "isolatedModules": false
     },
     "extends": "./tsconfig.json",
-    "exclude": [
-        "dist",
-        "public",
-        "src/dev/*"
-    ]
+    "exclude": ["dist", "public", "src/dev/*"]
 }
