@slidy/vue - fix build

--- a/packages/vue/tsconfig.json
+++ b/packages/vue/tsconfig.json
@@ -1,21 +1,11 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "baseUrl": ".",
-        "declarationDir": "dist/"
-        // "lib": [
-        //     "DOM",
-        //     "DOM.Iterable",
-        //     "ESNext"
-        // ]
+        "outFile": "dist/index.d.ts",
+        "isolatedModules": false,
+        "jsx": "preserve"
     },
-    "include": ["src/*"],
-    "exclude": [
-        // "src/utils/*",
-        // "src/index.ts"
+    "include": [
+        "src/*"
     ]
-    // "files": [
-    //     "src/slidy.ts",
-    //     "src/types.ts"
-    // ]
 }
