--- a/www/package.json
+++ b/www/package.json
@@ -1,36 +1,36 @@
 {
-	"name": "@slidy/www",
-	"version": "1.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"package": "svelte-kit package",
-		"test": "playwright test",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
-	},
-	"devDependencies": {
-		"@playwright/test": "^1.26.0",
-		"@slidy/animation": "workspace:*",
-		"@slidy/assets": "workspace:*",
-		"@slidy/media": "workspace:*",
-		"@slidy/svelte": "workspace:*",
-		"@sveltejs/adapter-static": "1.0.0-next.39",
-		"@sveltejs/kit": "^1.0.0-next.492",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^3.4.1",
-		"mdast-util-to-string": "^3.1.0",
-		"mdsvex": "^0.10.6",
-		"prettier-plugin-svelte": "^2.7.0",
-		"rehype-slug": "^5.0.1",
-		"svelte": "^3.50.1",
-		"svelte-check": "^2.9.0",
-		"svelte-preprocess": "^4.10.7",
-		"unist-util-visit": "^4.1.1",
-		"vite": "^3.1.3"
-	}
+    "name": "@slidy/www",
+    "version": "1.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "package": "svelte-kit package",
+        "test": "playwright test",
+        "check": "svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+        "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+        "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    },
+    "devDependencies": {
+        "@playwright/test": "^1.26.0",
+        "@slidy/animation": "workspace:*",
+        "@slidy/assets": "workspace:*",
+        "@slidy/media": "workspace:*",
+        "@slidy/svelte": "workspace:*",
+        "@sveltejs/adapter-static": "^1.0.0-next.43",
+        "@sveltejs/kit": "^1.0.0-next.498",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-svelte3": "^3.4.1",
+        "mdast-util-to-string": "^3.1.0",
+        "mdsvex": "^0.10.6",
+        "prettier-plugin-svelte": "^2.7.0",
+        "rehype-slug": "^5.0.1",
+        "svelte": "^3.50.1",
+        "svelte-check": "^2.9.0",
+        "svelte-preprocess": "^4.10.7",
+        "unist-util-visit": "^4.1.1",
+        "vite": "^3.1.3"
+    }
 }
