--- a/www/package.json
+++ b/www/package.json
@@ -19,18 +19,18 @@
         "@slidy/assets": "workspace:*",
         "@slidy/media": "workspace:*",
         "@slidy/svelte": "workspace:*",
-        "@sveltejs/adapter-static": "^1.0.0-next.49",
-        "@sveltejs/kit": "^1.0.0-next.582",
+        "@sveltejs/adapter-static": "^1.0.0",
+        "@sveltejs/kit": "^1.0.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-svelte3": "^3.4.1",
         "mdast-util-to-string": "^3.1.0",
         "mdsvex": "^0.10.6",
         "prettier-plugin-svelte": "^2.9.0",
         "rehype-slug": "^5.1.0",
-        "svelte": "^3.54.0",
+        "svelte": "^3.55.0",
         "svelte-check": "^2.10.2",
         "svelte-preprocess": "^4.10.7",
         "unist-util-visit": "^4.1.1",
-        "vite": "^4.0.0"
+        "vite": "^4.0.1"
     }
 }
