@slidy/element - rearange folders

--- a/packages/element/tsconfig.json
+++ b/packages/element/tsconfig.json
@@ -4,6 +4,14 @@
         "outFile": "dist/index.d.ts",
         "isolatedModules": false
     },
-    "include": ["src/*"],
-    "exclude": ["src/iife.ts"]
+    "include": [
+        "src/*",
+        // "src/lib/utils.ts",
+        // "src/lib/utils.ts",
+        "src/lib/slidy.ts",
+        // "src/lib/slidy.ts"
+    ],
+    "exclude": [
+        "src/iife.ts"
+    ]
 }
