--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -3,18 +3,18 @@
 	"compilerOptions": {
 		"resolveJsonModule": true,
 		"paths": {
-			"$app/*": [".svelte/dev/runtime/app/*", ".svelte/build/runtime/app/*"],
-			"@components": ["src/lib/components/index.ts"],
-			"@components/*": ["src/lib/components/*"],
-			"$lib": ["src/lib"],
-			"$lib/*": ["src/lib/*"],
-			"@lib/*": ["src/lib/*"],
-			"@paths": ["src/core/paths.ts"],
-			"@stores": ["src/lib/stores/index.ts"],
-			"@stores/*": ["src/lib/stores/*"],
-			"@styles/*": ["src/lib/styles/*"],
-			"@types": ["src/types/index.ts"],
-			"@utils/*": ["src/lib/utils/*"]
+			"$app/*": ["./svelte/dev/runtime/app/*", "./svelte/build/runtime/app/*"],
+			"@components": ["./src/lib/components/index.ts"],
+			"@components/*": ["./src/lib/components/*"],
+			"$lib": ["./src/lib"],
+			"$lib/*": ["./src/lib/*"],
+			"@lib/*": ["./src/lib/*"],
+			"@paths": ["./src/core/paths.ts"],
+			"@stores": ["./src/lib/stores/index.ts"],
+			"@stores/*": ["./src/lib/stores/*"],
+			"@styles/*": ["./src/lib/styles/*"],
+			"@types": ["./src/types/index.ts"],
+			"@utils/*": ["./src/lib/utils/*"]
 		}
 	}
 }
