@slidy/svelte - fix assets reexports

--- a/assets/package.json
+++ b/assets/package.json
@@ -3,7 +3,7 @@
     "version": "2.0.0",
     "description": "Slidy assets",
     "main": "index.js",
-    "keywords": [],
+    "type": "module",
     "author": {
         "name": "Artemiy Schukin",
         "url": "https://github.com/yhdgms1"
