--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,30 +2,61 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@slidy/assets/*": ["assets/*"],
-            "@slidy/animation": ["packages/animation/src"],
-            "@slidy/core": ["packages/core/src"],
-            "@slidy/easing": ["packages/easing/src"],
-            "@slidy/plugins": ["packages/plugins/src"],
-            "@slidy/element": ["packages/element/src"],
-            "@slidy/media": ["packages/media/src"],
-            "@slidy/react": ["packages/react/src"],
-            "@slidy/solid": ["packages/solid/src"],
-            "@slidy/svelte": ["packages/svelte/src"],
-            "@slidy/malina": ["packages/malina/src"],
-            "@slidy/vue": ["packages/vue/src"]
+            "@slidy/assets/*": [
+                "assets/*"
+            ],
+            "@slidy/animation": [
+                "packages/animation/src"
+            ],
+            "@slidy/core": [
+                "packages/core/src"
+            ],
+            "@slidy/easing": [
+                "packages/easing/src"
+            ],
+            "@slidy/plugins": [
+                "packages/plugins/src"
+            ],
+            "@slidy/element": [
+                "packages/element/src"
+            ],
+            "@slidy/media": [
+                "packages/media/src"
+            ],
+            "@slidy/react": [
+                "packages/react/src"
+            ],
+            "@slidy/solid": [
+                "packages/solid/src"
+            ],
+            "@slidy/svelte": [
+                "packages/svelte/src"
+            ],
+            "@slidy/malina": [
+                "packages/malina/src"
+            ],
+            "@slidy/vue": [
+                "packages/vue/src"
+            ]
         },
         "declaration": true,
         "emitDeclarationOnly": true,
         "moduleResolution": "Node",
-        "lib": ["DOM", "ESNext", "DOM.Iterable"],
+        "lib": [
+            "DOM",
+            "ESNext",
+            "DOM.Iterable"
+        ],
         "module": "ESNext",
         "target": "ESNext",
         "strict": true,
-        "importsNotUsedAsValues": "error",
+        // "importsNotUsedAsValues": "error",
+        "verbatimModuleSyntax": false,
         "isolatedModules": true,
         "resolveJsonModule": true,
         "esModuleInterop": true
     },
-    "exclude": ["node_modules/*"]
+    "exclude": [
+        "node_modules/*"
+    ]
 }
