--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -61,7 +61,7 @@
 		"@tsconfig/svelte": "^4.0.1",
 		"css-tree": "^2.3.1",
 		"esbuild-svelte": "^0.7.3",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.27.2",
 		"prettier-plugin-svelte": "^2.10.0",
 		"svelte": "^3.58.0",
 		"svelte-check": "^3.2.0",
