fix(solid): :ambulance: Fix types

--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -15,6 +15,7 @@
     "sideEffects": false,
     "exports": {
         ".": {
+            "types": "./dist/index.d.ts",
             "solid": "./dist/slidy.jsx",
             "node": "./dist/slidy.jsx",
             "default": "./dist/slidy.mjs"
