add exports block to svelte package
try to make something with: https://github.com/Valexr/Slidy/issues/113

--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -8,6 +8,11 @@
 	"svelte": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"style": "dist/slidy.css",
+	"exports": {     
+         ".": {
+             "svelte": "./dist/index.js"
+         }
+  },
 	"type": "module",
 	"files": [
 		"dist/*"
