--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,6 +9,11 @@
     "files": [
         "dist/*"
     ],
+    "exports": {     
+        ".": {
+            "svelte": "./dist/index.mjs"
+        }
+    },    
     "scripts": {
         "dev": "node esbuild --dev",
         "dev:core": "node esbuild --core",
