--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@slidy/core",
-    "version": "3.7.4",
+    "version": "3.7.5",
     "description": "Simple, configurable, nested & reusable sliding action script",
     "main": "dist/index.cjs",
     "module": "dist/index.mjs",
@@ -9,11 +9,12 @@
     "files": [
         "dist/*"
     ],
-    "exports": {     
+    "exports": {
         ".": {
+            "types": "./dist/index.d.ts",
             "svelte": "./dist/index.mjs"
         }
-    },    
+    },
     "scripts": {
         "dev": "node esbuild --dev",
         "dev:core": "node esbuild --core",
