--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -9,6 +9,17 @@
     "files": [
         "dist/*"
     ],
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "require": "./dist/index.cjs",
+            "import": "./dist/index.mjs",
+            "default": "./dist/index.mjs",
+            "browser": "./dist/index.js"
+        },
+        "./*": "./dist/*",
+        "./package.json": "./package.json"
+    },
     "scripts": {
         "dev": "node esbuild --dev",
         "dev:core": "node esbuild --dev",
