--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,6 +2,8 @@
     "name": "@slidy/core",
     "version": "3.7.5",
     "description": "Simple, configurable, nested & reusable sliding action script",
+    "unpkg": "dist/index.js",
+    "jsdelivr": "dist/index.js",
     "main": "dist/index.cjs",
     "module": "dist/index.mjs",
     "types": "dist/index.d.ts",
@@ -12,8 +14,14 @@
     "exports": {
         ".": {
             "types": "./dist/index.d.ts",
-            "svelte": "./dist/index.mjs"
-        }
+            "svelte": "./dist/index.mjs",
+            "require": "./dist/index.cjs",
+            "import": "./dist/index.mjs",
+            "default": "./dist/index.mjs",
+            "browser": "./dist/index.js"
+        },
+        "./*": "./dist/*",
+        "./package.json": "./package.json"
     },
     "scripts": {
         "dev": "node esbuild --dev",
