--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -11,11 +11,10 @@
     ],
     "exports": {
         ".": {
+            "browser": "./dist/index.js",
             "types": "./dist/index.d.ts",
             "require": "./dist/index.cjs",
-            "import": "./dist/index.mjs",
-            "default": "./dist/index.mjs",
-            "browser": "./dist/index.js"
+            "import": "./dist/index.mjs"
         },
         "./*": "./dist/*",
         "./package.json": "./package.json"
