--- a/www/package.json
+++ b/www/package.json
@@ -14,15 +14,15 @@
         "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
     },
     "devDependencies": {
-        "@playwright/test": "^1.47.0",
         "@slidy/animation": "workspace:*",
         "@slidy/assets": "workspace:*",
         "@slidy/media": "workspace:*",
         "@slidy/svelte": "workspace:*",
-        "@sveltejs/adapter-static": "^2.0.3",
-        "@sveltejs/kit": "^1.30.4",
+        "@sveltejs/adapter-static": "^3.0.4",
+        "@sveltejs/kit": "^2.5.27",
+        "@sveltejs/vite-plugin-svelte": "^3.1.2",
         "eslint-config-prettier": "^8.10.0",
-        "eslint-plugin-svelte": "^2.43.0",
+        "eslint-plugin-svelte": "^2.44.0",
         "mdast-util-to-string": "^3.2.0",
         "mdsvex": "^0.11.2",
         "prettier-plugin-svelte": "^3.2.6",
@@ -31,6 +31,6 @@
         "svelte-check": "^3.8.6",
         "svelte-preprocess": "^6.0.2",
         "unist-util-visit": "^4.1.2",
-        "vite": "^4.5.3"
+        "vite": "^5.4.6"
     }
 }
