--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -28,7 +28,8 @@
 		"format": "prettier --write '**/*.{ts,md,svelte,json,html,css}'",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"pub": "pnpm build && pnpm publish --no-git-checks --access public",
-		"lint": "eslint src/**/*.{ts,svelte}"
+		"lint": "eslint src/**/*.{ts,svelte}",
+		"lint:fix": "eslint --fix src/**/*.{ts,svelte}"
 	},
 	"repository": {
 		"type": "git",
@@ -68,11 +69,11 @@
 		"@tsconfig/svelte": "^5.0.4",
 		"css-tree": "^2.3.1",
 		"esbuild-svelte": "^0.8.2",
-		"eslint-plugin-svelte": "^2.44.0",
-		"prettier-plugin-svelte": "^3.2.6",
+		"eslint-plugin-svelte": "^2.44.1",
+		"prettier-plugin-svelte": "^3.2.7",
 		"svelte": "^4.2.19",
-		"svelte-check": "^4.0.2",
-		"svelte-preprocess": "^6.0.2",
+		"svelte-check": "^4.0.4",
+		"svelte-preprocess": "^6.0.3",
 		"svelte2tsx": "^0.6.27"
 	},
 	"peerDependencies": {
