--- a/packages/animation/package.json
+++ b/packages/animation/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@slidy/animation",
-    "version": "1.0.8",
+    "version": "1.0.9",
     "description": "Simple animation functions for inertion scrolling",
     "main": "dist/index.cjs",
     "module": "dist/index.mjs",
@@ -11,7 +11,11 @@
     ],
     "exports": {
         ".": {
-            "browser": "./dist/index.js",
+            "browser": {
+                "import": "./dist/index.mjs",
+                "require": "./dist/index.cjs",
+                "default": "./dist/index.js"
+            },
             "types": "./dist/index.d.ts",
             "require": "./dist/index.cjs",
             "import": "./dist/index.mjs"
