--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@slidy/core",
-    "version": "3.7.7",
+    "version": "3.7.8",
     "description": "Simple, configurable, nested & reusable sliding action script",
     "unpkg": "dist/index.js",
     "jsdelivr": "dist/index.js",
@@ -13,7 +13,11 @@
     ],
     "exports": {
         ".": {
-            "browser": "./dist/index.js",
+            "browser": {
+                "import": "./dist/index.mjs",
+                "require": "./dist/index.cjs",
+                "default": "./dist/index.js"
+            },
             "types": "./dist/index.d.ts",
             "require": "./dist/index.cjs",
             "import": "./dist/index.mjs"
