--- a/packages/easing/package.json
+++ b/packages/easing/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@slidy/easing",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "description": "Simple easing functions for inertion scrolling",
     "main": "dist/index.cjs",
     "module": "dist/index.mjs",
@@ -11,7 +11,11 @@
     ],
     "exports": {
         ".": {
-            "browser": "./dist/index.js",
+            "browser": {
+                "import": "./dist/index.mjs",
+                "require": "./dist/index.cjs",
+                "default": "./dist/index.js"
+            },
             "types": "./dist/index.d.ts",
             "require": "./dist/index.cjs",
             "import": "./dist/index.mjs"
