--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build and deploy
 
 on:
     push:
-        branches: [master]
+        branches: [main]
         paths:
             - www/**
 
