--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -1,85 +1,85 @@
 {
-	"name": "@slidy/svelte",
-	"version": "3.4.6",
-	"description": "Simple, configurable & reusable carousel component built with SvelteJS",
-	"main": "dist/slidy.cjs",
-	"module": "dist/slidy.mjs",
-	"browser": "dist/slidy.js",
-	"svelte": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"style": "dist/slidy.css",
-	"exports": {
-		"./*": "./*",
-		".": {
-			"types": "./dist/index.d.ts",
-			"svelte": "./dist/index.js"
-		}
-	},
-	"type": "module",
-	"files": [
-		"dist/*"
-	],
-	"scripts": {
-		"dev": "node esbuild --dev",
-		"dev:svelte": "node esbuild --svelte",
-		"dev:local": "pnpm dev:svelte --parallel --filter=@slidy/svelte...",
-		"build": "node esbuild && tsc --project tsconfig.build.json && node ../../env/dts && prettier --write 'dist/**/*.{ts,md,svelte,json,html,css}'",
-		"build:local": "pnpm build -r --filter=@slidy/svelte...",
-		"format": "prettier --write '**/*.{ts,md,svelte,json,html,css}'",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"pub": "pnpm build && pnpm publish --no-git-checks --access public",
-		"lint": "eslint src/**/*.{ts,svelte}",
-		"lint:fix": "eslint --fix src/**/*.{ts,svelte}"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/Valexr/slidy.git"
-	},
-	"keywords": [
-		"carousel",
-		"component",
-		"svelte",
-		"sveltejs",
-		"svelte-plugin"
-	],
-	"author": {
-		"name": "Eric Rovell",
-		"url": "https://github.com/EricRovell"
-	},
-	"contributors": [
-		{
-			"name": "Eric Rovell",
-			"url": "https://github.com/EricRovell"
-		},
-		{
-			"name": "Valexr",
-			"email": "valexr@gmail.com",
-			"url": "https://github.com/Valexr"
-		}
-	],
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/Valexr/slidy/issues"
-	},
-	"homepage": "https://github.com/Valexr/Slidy/tree/master/packages/svelte",
-	"devDependencies": {
-		"@slidy/animation": "workspace:*",
-		"@slidy/assets": "workspace:*",
-		"@slidy/easing": "workspace:*",
-		"@tsconfig/svelte": "^5.0.4",
-		"css-tree": "^2.3.1",
-		"esbuild-svelte": "^0.8.2",
-		"eslint-plugin-svelte": "^2.46.0",
-		"prettier-plugin-svelte": "^3.2.7",
-		"svelte": "^4.2.19",
-		"svelte-check": "^4.0.6",
-		"svelte-preprocess": "^6.0.3",
-		"svelte2tsx": "^0.6.27"
-	},
-	"peerDependencies": {
-		"svelte": "3 - 4"
-	},
-	"dependencies": {
-		"@slidy/core": "workspace:*"
-	}
+  "name": "@slidy/svelte",
+  "version": "3.4.7",
+  "description": "Simple, configurable & reusable carousel component built with SvelteJS",
+  "main": "dist/slidy.cjs",
+  "module": "dist/slidy.mjs",
+  "browser": "dist/slidy.js",
+  "svelte": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "style": "dist/slidy.css",
+  "exports": {
+    "./*": "./*",
+    ".": {
+      "types": "./dist/index.d.ts",
+      "svelte": "./dist/index.js"
+    }
+  },
+  "type": "module",
+  "files": [
+    "dist/*"
+  ],
+  "scripts": {
+    "dev": "node esbuild --dev",
+    "dev:svelte": "node esbuild --svelte",
+    "dev:local": "pnpm dev:svelte --parallel --filter=@slidy/svelte...",
+    "build": "node esbuild && tsc --project tsconfig.build.json && node ../../env/dts && prettier --write 'dist/**/*.{ts,md,svelte,json,html,css}'",
+    "build:local": "pnpm build -r --filter=@slidy/svelte...",
+    "format": "prettier --write '**/*.{ts,md,svelte,json,html,css}'",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "pub": "pnpm build && pnpm publish --no-git-checks --access public",
+    "lint": "eslint src/**/*.{ts,svelte}",
+    "lint:fix": "eslint --fix src/**/*.{ts,svelte}"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Valexr/slidy.git"
+  },
+  "keywords": [
+    "carousel",
+    "component",
+    "svelte",
+    "sveltejs",
+    "svelte-plugin"
+  ],
+  "author": {
+    "name": "Eric Rovell",
+    "url": "https://github.com/EricRovell"
+  },
+  "contributors": [
+    {
+      "name": "Eric Rovell",
+      "url": "https://github.com/EricRovell"
+    },
+    {
+      "name": "Valexr",
+      "email": "valexr@gmail.com",
+      "url": "https://github.com/Valexr"
+    }
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Valexr/slidy/issues"
+  },
+  "homepage": "https://github.com/Valexr/Slidy/tree/master/packages/svelte",
+  "devDependencies": {
+    "@slidy/animation": "workspace:*",
+    "@slidy/assets": "workspace:*",
+    "@slidy/easing": "workspace:*",
+    "@tsconfig/svelte": "^5.0.4",
+    "css-tree": "^2.3.1",
+    "esbuild-svelte": "^0.8.2",
+    "eslint-plugin-svelte": "^2.46.0",
+    "prettier-plugin-svelte": "^3.2.7",
+    "svelte": "^4.2.19",
+    "svelte-check": "^4.0.6",
+    "svelte-preprocess": "^6.0.3",
+    "svelte2tsx": "^0.6.27"
+  },
+  "peerDependencies": {
+    "svelte": "3 - 4"
+  },
+  "dependencies": {
+    "@slidy/core": "^workspace:*"
+  }
 }
