--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -52,10 +52,10 @@
     "devDependencies": {
         "@slidy/core": "workspace:*",
         "@vue/compiler-sfc": "^3.5.12",
-        "@vue/eslint-config-prettier": "^9.0.0",
-        "@vue/eslint-config-typescript": "^12.0.0",
-        "@vue/tsconfig": "^0.5.1",
-        "esbuild-plugin-vue-next": "^0.1.4",
+        "@vue/eslint-config-prettier": "^10.1.0",
+        "@vue/eslint-config-typescript": "^14.1.3",
+        "@vue/tsconfig": "^0.6.0",
+        "esbuild-plugin-vue3": "^0.4.2",
         "eslint-plugin-vue": "^9.30.0",
         "vue": "^3.5.12",
         "vue-tsc": "^1.8.27"
