--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -50,13 +50,13 @@
         "rules": {}
     },
     "devDependencies": {
-        "@slidy/core": "workspace:*",
+        "@slidy/core": "workspace:^",
         "@vue/compiler-sfc": "^3.5.12",
         "@vue/eslint-config-prettier": "^10.1.0",
         "@vue/eslint-config-typescript": "^14.1.3",
         "@vue/tsconfig": "^0.6.0",
         "esbuild-plugin-vue3": "^0.4.2",
-        "eslint-plugin-vue": "^9.30.0",
+        "eslint-plugin-vue": "^9.31.0",
         "vue": "^3.5.12",
         "vue-tsc": "^1.8.27"
     }
